Correct misalignment on post view

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -88,7 +88,7 @@ a
 	+border-radius(0)
 
 .post-view-container
-	margin-top: 15px
+	margin-top: 5px
 
 .post-view-container-title
 	position: relative
